<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <EditText
        android:id="@+id/editTextApell"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/Registro_Apellido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextNom" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/Registro_Nombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/Registro_Tel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextApell" />

    <EditText
        android:id="@+id/editTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/Registro_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTels" />

    <EditText
        android:id="@+id/editTextContraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="47dp"
        android:ems="10"
        android:hint="@string/Registro_constraseña"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextMail" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="117dp"
        android:layout_height="46dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:shadowColor="#00B9B9B9"
        android:shadowDx="10"
        android:shadowDy="15"
        android:shadowRadius="5"
        android:text="Cancelar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTerminos" />

    <Button
        android:id="@+id/buttonAcept"
        android:layout_width="118dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#009688"
        android:shadowColor="#00B9B9B9"
        android:shadowDx="10"
        android:shadowDy="15"
        android:text="Aceptar"
        android:textColor="#FFFFFFFF"
        app:layout_constraintStart_toEndOf="@+id/buttonCancel"
        app:layout_constraintTop_toBottomOf="@+id/checkTerminos" />

    <CheckBox
        android:id="@+id/checkTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:buttonTint="#009688"
        android:checked="true"
        android:text="Acepto terminos y condiciones"
        android:textColor="#009688"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextContraseña" />

</android.support.constraint.ConstraintLayout>