<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolicitudActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="334dp"
        android:layout_height="35dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="30dp"
        android:entries="@array/listaServicios"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/TextSolicitudesDireccion"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:onClick="Mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="330dp"
        android:layout_height="133dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="30dp"
        android:background="#00DDDDDD"
        android:backgroundTint="#00CECCCC"
        android:backgroundTintMode="add"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/MultiLineSolicitudes"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button3"
        android:layout_width="146dp"
        android:layout_height="58dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="#FF9800"
        android:text="@string/Btn_Solicitud"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />
</android.support.constraint.ConstraintLayout>